Version 2.02.178 - 
=====================================
  Extend internal library to recognize and work with component LV.
  Skip duplicate check for active LV when prompting for its removal.
  Activate correct lock holding LV when it is cached.
  Do not modify archived metadata when removing striped raid.
  Fix memleak on error path when obtaining lv_raid_data_offset.
  Fix compatibility size test of extended external origin.
  Add external_origin visiting in for_each_sub_lv().
  Ensure cluster commands drop their device cache before locking VG.
  Do not report LV as remotely active when it's locally exclusive in cluster.
  Add deprecate messages for usage of mirrors with mirrorlog.
  Separate reporting of monitoring status and error status.
  Improve validation of created strings in vgimportclone.
  Add missing initialisation of mem pool in systemd generator.
  Do not reopen output streams for multithreaded users of liblvm.
  Use versionsort to fix archive file expiry beyond 100000 files.
  Add devices/use_aio, aio_max, aio_memory to configure AIO limits.
  Support asynchronous I/O when scanning devices.
  Detect asynchronous I/O capability in configure or accept --disable-aio.
  Add AIO_SUPPORTED_CODE_PATH to indicate whether AIO may be used.
  Configure ensures /usr/bin dir is checked for dmpd tools.
  Restore pvmove support for wide-clustered active volumes (2.02.177).
  Avoid non-exclusive activation of exclusive segment types.
  Fix trimming sibling PVs when doing a pvmove of raid subLVs.
  Preserve exclusive activation during thin snaphost merge.
  Suppress some repeated reads of the same disk data at the device layer.
  Avoid exceeding array bounds in allocation tag processing.
  Refactor metadata reading code to use callback functions.
  Move memory allocation for the key dev_reads into the device layer.

Version 2.02.177 - 18th December 2017
=====================================
  When writing text metadata content, use complete 4096 byte blocks.